--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:update-snapshots": "jest --config=jest.config.json -u",
     "test:ci": "npm run lint && npm run test",
     "lint": "eslint --format codeframe \"lib/**/*.ts\" \"test/**/*.ts\"",
-    "prettier": "prettier --write \"{lib,test}/**/*.{js,ts}\" index.ts"
+    "prettier": "prettier --write \"{lib,test}/**/*.{js,ts}\" index.ts",
+    "run": "ts-node scripts/launchScraping.ts"
   },
   "dependencies": {
     "csv-writer": "^1.6.0",
@@ -37,6 +38,7 @@
     "jest": "^26.5.3",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.1",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "jest": {
